--- a/slider.css
+++ b/slider.css
@@ -17,12 +17,9 @@ body {
 }
 
 .slider {
-  width: 100%;
-  max-width: 600px;
-  height: 400px;
-  margin: 20px;
+  width: 100vw;
+  height: 100vh;
   text-align: center;
-  border-radius: 20px;
   overflow: hidden;
   position: relative;
 }
@@ -33,6 +30,7 @@ body {
   position: relative;
   scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
+  height: 100%;
 }
 
 .slide:nth-of-type(even) {
@@ -45,7 +43,7 @@ body {
   align-items: center;
   flex-shrink: 0;
   width: 100%;
-  height: 400px;
+  height: 100%;
   scroll-snap-align: center;
   margin-right: 0px;
   box-sizing: border-box;
