--- a/slider.css
+++ b/slider.css
@@ -19,7 +19,6 @@ body {
 .slider {
   width: 100vw;
   height: 100vh;
-  text-align: center;
   overflow: hidden;
   position: relative;
 }
@@ -104,8 +103,8 @@ a.slide__next,
   position: absolute;
   bottom: 5%;
   left: 50%;
-  width: 200px;
-  margin-left: -100px;
+  width: 100%;
+  margin-left: -50%;
   text-align: center;
 }
 
