--- a/slider.css
+++ b/slider.css
@@ -113,6 +113,8 @@ a.slide__next,
   height: 15px;
   width: 15px;
   border-radius: 50%;
-  background-color: black;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
   margin: 0 10px 0 10px;
 }
