--- a/slider.css
+++ b/slider.css
@@ -102,19 +102,35 @@ a.slide__next,
   box-sizing: border-box;
   position: absolute;
   bottom: 5%;
-  left: 50%;
   width: 100%;
-  margin-left: -50%;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+.slider__pages {
+  --slider-height: 1em;
+  display: flex;
+  justify-content: center;
+  margin: 0 1em;
+  height: var(--slider-height);
+  border-width: 1px;
+  border-radius: var(--slider-height);
+  border-style: solid;
+  border-color: rgb(24, 24, 24);
 }
 
 .slider__navlink {
   display: inline-block;
-  height: 15px;
-  width: 15px;
-  border-radius: 50%;
-  border-style: solid;
-  border-width: 1px;
-  border-color: black;
-  margin: 0 10px 0 10px;
+  height: 100%;
+  width: 3em;
+}
+
+.slider__navlink:last-child {
+  border-top-right-radius: var(--slider-height);
+  border-bottom-right-radius: var(--slider-height);
+  width: 2.55em;
+}
+.slider__navlink:first-child {
+  border-top-left-radius: var(--slider-height);
+  border-bottom-left-radius: var(--slider-height);
 }
