--- a/slider.css
+++ b/slider.css
@@ -13,12 +13,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 800px;
+  width: 100vw;
 }
 
 .slider {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   position: relative;
 }
@@ -123,6 +124,7 @@ a.slide__next,
   display: inline-block;
   height: 100%;
   width: 3em;
+  position: relative;
 }
 
 .slider__navlink:last-child {
@@ -133,4 +135,16 @@ a.slide__next,
 .slider__navlink:first-child {
   border-top-left-radius: var(--slider-height);
   border-bottom-left-radius: var(--slider-height);
+}
+
+.slider__navlink.active::after {
+  display: inline-block;
+  content: "";
+  background-color: white;
+  position: absolute;
+  width: 0.7em;
+  height: 0.7em;
+  border-radius: 50%;
+  top: 0.15em;
+  left: 1em;
 }
