--- a/slider-colors.css
+++ b/slider-colors.css
@@ -28,24 +28,32 @@
 .slide:nth-child(1),
 .slider__navlink:nth-child(1) {
   background-color: var(--color-business);
+}
+.slider__navlink:nth-child(1) {
   background: linear-gradient(90deg, var(--color-business) var(--slider-gradient-at), var(--color-business-improv) 100%);
 }
 
 .slide:nth-child(2),
 .slider__navlink:nth-child(2) {
   background-color: var(--color-business-improv);
+}
+.slider__navlink:nth-child(2) {
   background: linear-gradient(90deg, var(--color-business-improv) 0%, var(--color-business-improv) var(--slider-gradient-at), var(--color-both) 100%);
 }
 
 .slide:nth-child(3),
 .slider__navlink:nth-child(3) {
   background-color: var(--color-both);
+}
+.slider__navlink:nth-child(3) {
   background: linear-gradient(90deg, var(--color-both) 0%, var(--color-both) var(--slider-gradient-at), var(--color-improv-business) 100%);
 }
 
 .slide:nth-child(4),
 .slider__navlink:nth-child(4) {
   background-color: var(--color-improv-business);
+}
+.slider__navlink:nth-child(4) {
   background: linear-gradient(90deg, var(--color-improv-business) 0%, var(--color-improv-business) var(--slider-gradient-at), var(--color-improv) 100%);
 }
 
