--- a/slider.css
+++ b/slider.css
@@ -96,7 +96,7 @@ a.slide__next,
 
 .slider__controls {
   position: absolute;
-  bottom: 5%;
+  top: 1em;
   width: 100%;
 }
 
@@ -108,7 +108,8 @@ a.slide__next,
 }
 
 .slider__pages {
-  --slider-height: 1em;
+  --slider-height: 1.5em;
+  --slider-navlink_width: 8em;
   display: flex;
   justify-content: center;
   margin: 0 1em;
@@ -122,14 +123,15 @@ a.slide__next,
 .slider__navlink {
   display: inline-block;
   height: 100%;
-  width: 3em;
+  width: var(--slider-navlink_width);
   position: relative;
+  z-index: 10;
 }
 
 .slider__navlink:last-child {
   border-top-right-radius: var(--slider-height);
   border-bottom-right-radius: var(--slider-height);
-  width: 2.55em;
+  width: calc(var(--slider-navlink_width) * 0.85);
 }
 .slider__navlink:first-child {
   border-top-left-radius: var(--slider-height);
@@ -138,18 +140,20 @@ a.slide__next,
 
 .slider__navlink.active::after {
   display: inline-block;
+  box-sizing: content-box;
   content: "";
   background-color: white;
   position: absolute;
-  width: 0.7em;
-  height: 0.7em;
+  padding: calc(var(--slider-height) / 3);
   border-radius: 50%;
-  top: 0.15em;
-  left: 1em;
+  top: calc(var(--slider-height) / 6);
+  left: calc(var(--slider-navlink_width) / 2 - calc(var(--slider-height) / 2));
 }
 
 .slider__label {
   width: 10em;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 .slider__label:first-child {
   text-align: right;
