--- a/slider.css
+++ b/slider.css
@@ -162,9 +162,10 @@ a.slide__next,
 .slider__poke {
   width: 100%;
   text-align: center;
-  font-size: 4em;
+  font-size: 50px;
   font-weight: bold;
+  height: 20px;
   position: relative;
-  top: -0.3em;
+  top: -30px;
   z-index: 5;
 }
