--- a/slider.css
+++ b/slider.css
@@ -139,15 +139,13 @@ a.slide__next,
 }
 
 .slider__navlink.active::after {
-  display: inline-block;
-  box-sizing: content-box;
-  content: "";
-  background-color: white;
+  content: "\2194";
   position: absolute;
-  padding: calc(var(--slider-height) / 3);
-  border-radius: 50%;
-  top: calc(var(--slider-height) / 6);
-  left: calc(var(--slider-navlink_width) / 2 - calc(var(--slider-height) / 2));
+  font-size: 50px;
+  font-weight: bold;
+  top: -20px;
+  left: 30px;
+  color: black;
 }
 
 .slider__label {
@@ -157,15 +155,4 @@ a.slide__next,
 }
 .slider__label:first-child {
   text-align: right;
-}
-
-.slider__poke {
-  width: 100%;
-  text-align: center;
-  font-size: 50px;
-  font-weight: bold;
-  height: 20px;
-  position: relative;
-  top: -30px;
-  z-index: 5;
 }
