--- a/slider.css
+++ b/slider.css
@@ -8,7 +8,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 800px;
+  height: 100vh;
   width: 100vw;
 }
 
@@ -45,12 +45,6 @@ body {
   background: white;
   transform-origin: center center;
   transform: scale(1);
-}
-
-.slide__text {
-  font-size: 40px;
-  font-weight: bold;
-  font-family: sans-serif;
 }
 
 .slide a {
